namespace.yaml
apiVersion: v1 
kind: Namespace
metadata:
  name: assign1
  labels:
  name: assign1
