backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: assign1
  labels:
    app: backend
    purpose: api
spec:
  replicas: 2
  revisionHistoryLimit: 3        # ← sirf 3 purane versions rakho
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1                # ← 1 extra pod allowed
      maxUnavailable: 0          # ← 0 pods unavailable (zero downtime)
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        purpose: api
    spec:
      containers:
      - name: podinfo
        image: ghcr.io/stefanprodan/podinfo:6.7.1
        ports:
        - containerPort: 9898
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        startupProbe:
          httpGet:
            path: /healthz
            port: 9898
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 30 # 30 baar fail hone tak wait karo
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9898
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9898
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
