backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: assign1
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - name: http
    port: 9898
    targetPort: 9898
    protocol: TCP
