redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: assign1
spec:
 type: ClusterIP
 selector: 
  app: redis
 ports: 
 - name: redis-port
   port: 6379 # port on which service will be exposed
   targetPort: 6379 # port on which container is running
   protocol: TCP
