whoami_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: assign1
  labels:
    app: whoami
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
  - name: http
    port: 80 
    targetPort: 80 #container ki port jahan se service ko traffic forward karna hai
    protocol: TCP
